--- a/html/header.html
+++ b/html/header.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jarvis</title>
-        <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
