Add sb-admin-2 files

--- a/html/error.html
+++ b/html/error.html
@@ -1,4 +1,7 @@
-<div class="alert alert-danger">
-    <h4 class="alert-heading">Error {{statusCode}}</h4>
-    <p class="mb-0">{{statusDescription}}</p>
-</div>
+                    <!-- {{statusCode}} Error Text -->
+                    <div class="text-center">
+                        <div class="error mx-auto" data-text="{{statusCode}}">{{statusCode}}</div>
+                        <p class="lead text-gray-800 mb-5">{{statusDescription}}</p>
+                        <p class="text-gray-500 mb-0">It looks like you found a glitch in the matrix...</p>
+                        <a href="index.html">&larr; Back to Dashboard</a>
+                    </div>
